fix: added z-index to allow selecting text in entry

--- a/src/css/entry.webgen.static.css
+++ b/src/css/entry.webgen.static.css
@@ -61,6 +61,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    z-index: 1;
 }
 
 .wentry .prefix,
